# celery-lite

./: .gitignore  README.md  pyproject.toml
celery/: utils.py  worker.py
celery/app/: __init__.py
celery/concurrency/: base.py  thread.py
example/: client.py  client1.py  sender.py
example/tasks/: tasks.py
